# linuxScrips

./: CMakeLists.txt  main.cpp
scrips/: toggle-dock-autohide.sh  twitch-popup.sh
source/: CMakeLists.txt  Commands.cpp  Commands.hpp
